make compatible with java 8